translation for ios and mobile app

--- a/src/i18n/ar/translation.json
+++ b/src/i18n/ar/translation.json
@@ -417,6 +417,52 @@
         }
       ],
       "footer": "تعاون معنا لتحويل تواجدك عبر الإنترنت وتحقيق أهداف عملك من خلال حلول الويب المبتكرة والفعالة."
+    },
+    "iosAppDev": {
+      "title": "تطوير تطبيقات iOS",
+      "header": "في BIRDS OF EDEN، نحن متخصصون في تطوير تطبيقات iOS سلسة وبديهية لتعزيز وجود علامتك التجارية وجذب جمهورك على App Store.",
+      "list": [
+        {
+          "title": "تصميم يركز على المستخدم",
+          "description": "نحن نعطي الأولوية لتجربة المستخدم وتصميم الواجهة لإنشاء تطبيقات iOS ليست فقط جذابة بصريًا ولكن أيضًا سهلة الاستخدام."
+        },
+        {
+          "title": "تحسين الأداء",
+          "description": "باستخدام أحدث التقنيات وأفضل الممارسات، نضمن الأداء الأمثل والاستجابة العالية لتطبيقات iOS الخاصة بك."
+        },
+        {
+          "title": "تحسين متجر التطبيقات (ASO)",
+          "description": "يساعدك فريقنا على التنقل في تعقيدات نظام متجر التطبيقات، وتحسين قائمة تطبيقك لتحقيق أقصى قدر من الرؤية والتنزيلات."
+        },
+        {
+          "title": "الدعم المستمر",
+          "description": "من الفكرة إلى الإطلاق وما بعده، نقدم دعمًا شاملاً لضمان أن تطبيق iOS الخاص بك يحقق أهداف عملك ويتطور وفقًا لاحتياجاتك."
+        }
+      ],
+      "footer": "تعاون معنا لتحويل أفكار تطبيق iOS الخاصة بك إلى واقع وترك انطباع دائم على المستخدمين في نظام iOS البيئي المتنامي باستمرار."
+    },
+    "mobileApp": {
+      "title": "حلول تطبيقات الجوال",
+      "header": "تقدم BIRDS OF EDEN حلول تطبيقات جوال شاملة لتمكين عملك من خلال تطبيقات مستجيبة وغنية بالميزات عبر المنصات المختلفة.",
+      "list": [
+        {
+          "title": "تنوع المنصات",
+          "description": "تمتد خبرتنا إلى تطوير التطبيقات لأنظمة iOS و Android والبيئات متعددة المنصات، مما يضمن وصولًا واسعًا لجمهورك المستهدف."
+        },
+        {
+          "title": "وظائف غنية بالميزات",
+          "description": "من مصادقة المستخدم والإشعارات الفورية إلى عمليات الشراء داخل التطبيق والتكامل مع أطراف ثالثة، نقوم بتنفيذ مجموعة واسعة من الميزات لتعزيز تجربة المستخدم والتفاعل."
+        },
+        {
+          "title": "بنية قابلة للتطوير",
+          "description": "نقوم بتصميم بنى قابلة للتطوير تستوعب نمو تطبيقك ومتطلباته المتطورة، مما يضمن أداءً سلسًا وموثوقًا مع توسع قاعدة المستخدمين."
+        },
+        {
+          "title": "تطوير أجايل",
+          "description": "من خلال منهجيات أجايل، نعطي الأولوية للتعاون والمرونة، مما يسمح بالتكرار السريع والتحسين المستمر طوال عملية التطوير."
+        }
+      ],
+      "footer": "تعاون معنا للاستفادة من قوة تكنولوجيا الهواتف المحمولة ودفع عملك إلى آفاق جديدة من النجاح في العصر الرقمي."
     }
   },
 
