--- a/src/i18n/bn/translation.json
+++ b/src/i18n/bn/translation.json
@@ -418,6 +418,52 @@
         }
       ],
       "footer": "উদ্ভাবনী এবং কার্যকর ওয়েব সমাধানের মাধ্যমে আপনার অনলাইন উপস্থিতি রূপান্তর করতে এবং আপনার ব্যবসার উদ্দেশ্য অর্জন করতে আমাদের সাথে অংশীদার হন।"
+    },
+    "iosAppDev": {
+      "title": "iOS অ্যাপ ডেভেলপমেন্ট",
+      "header": "BIRDS OF EDEN-এ, আমরা নির্বিঘ্ন ও স্বজ্ঞাত iOS অ্যাপ তৈরি করতে বিশেষজ্ঞ, যা আপনার ব্র্যান্ডের উপস্থিতি উন্নত করবে এবং App Store-এ আপনার দর্শকদের আকর্ষণ করবে।",
+      "list": [
+        {
+          "title": "ব্যবহারকারী-কেন্দ্রিক ডিজাইন",
+          "description": "আমরা ব্যবহারকারী অভিজ্ঞতা এবং ইন্টারফেস ডিজাইনে অগ্রাধিকার দিই, যাতে iOS অ্যাপগুলো দেখতে আকর্ষণীয় এবং সহজে ব্যবহারযোগ্য হয়।"
+        },
+        {
+          "title": "পারফরম্যান্স অপ্টিমাইজেশন",
+          "description": "সর্বশেষ প্রযুক্তি ও সেরা পদ্ধতিগুলি ব্যবহার করে, আমরা আপনার iOS অ্যাপগুলির সর্বোচ্চ কর্মক্ষমতা এবং প্রতিক্রিয়াশীলতা নিশ্চিত করি।"
+        },
+        {
+          "title": "অ্যাপ স্টোর অপ্টিমাইজেশন (ASO)",
+          "description": "আমাদের দল আপনাকে অ্যাপ স্টোরের জটিলতাগুলি পরিচালনা করতে সহায়তা করে, আপনার অ্যাপের দৃশ্যমানতা এবং ডাউনলোড সর্বাধিক করতে তালিকাভুক্তিকরণ অপ্টিমাইজ করে।"
+        },
+        {
+          "title": "নিরবিচার সহায়তা",
+          "description": "ধারণা থেকে লঞ্চ এবং তার পরেও, আমরা ব্যাপক সহায়তা প্রদান করি যাতে আপনার iOS অ্যাপ আপনার ব্যবসায়িক উদ্দেশ্য পূরণ করে এবং আপনার চাহিদার সাথে বিকশিত হয়।"
+        }
+      ],
+      "footer": "আপনার iOS অ্যাপ ধারণাগুলো বাস্তবে রূপ দিতে আমাদের সঙ্গে কাজ করুন এবং ক্রমবর্ধমান iOS ইকোসিস্টেমে আপনার ব্যবহারকারীদের উপর স্থায়ী ছাপ ফেলুন।"
+    },
+    "mobileApp": {
+      "title": "মোবাইল অ্যাপ সল্যুশন",
+      "header": "BIRDS OF EDEN বিস্তৃত মোবাইল অ্যাপ সমাধান প্রদান করে, যা আপনার ব্যবসাকে প্রতিক্রিয়াশীল এবং সমৃদ্ধ বৈশিষ্ট্যযুক্ত অ্যাপ্লিকেশনগুলির মাধ্যমে উন্নত করে।",
+      "list": [
+        {
+          "title": "প্ল্যাটফর্ম বৈচিত্র্য",
+          "description": "আমাদের দক্ষতা iOS, Android, এবং ক্রস-প্ল্যাটফর্ম অ্যাপ উন্নয়নে প্রসারিত, যা আপনার লক্ষ্যমাত্রার জন্য ব্যাপক অ্যাক্সেসযোগ্যতা নিশ্চিত করে।"
+        },
+        {
+          "title": "সমৃদ্ধ বৈশিষ্ট্যযুক্ত কার্যকারিতা",
+          "description": "ব্যবহারকারী প্রমাণীকরণ, পুশ বিজ্ঞপ্তি, ইন-অ্যাপ কেনাকাটা এবং থার্ড-পার্টি ইন্টিগ্রেশনের মতো বৈশিষ্ট্যগুলি অন্তর্ভুক্ত করে আমরা ব্যবহারকারীর অভিজ্ঞতা এবং সম্পৃক্ততা উন্নত করি।"
+        },
+        {
+          "title": "স্কেলযোগ্য আর্কিটেকচার",
+          "description": "আমরা স্কেলযোগ্য আর্কিটেকচার ডিজাইন করি যা আপনার অ্যাপের বৃদ্ধিকে সমর্থন করে এবং এর পরিবর্তনশীল প্রয়োজনীয়তাগুলির সাথে খাপ খায়।"
+        },
+        {
+          "title": "অ্যাজাইল ডেভেলপমেন্ট",
+          "description": "অ্যাজাইল পদ্ধতিগুলি ব্যবহার করে, আমরা সহযোগিতা এবং নমনীয়তাকে অগ্রাধিকার দিই, যা দ্রুত পুনরাবৃত্তি এবং উন্নতি সক্ষম করে।"
+        }
+      ],
+      "footer": "মোবাইল প্রযুক্তির শক্তিকে কাজে লাগাতে এবং আপনার ব্যবসাকে ডিজিটাল যুগের নতুন উচ্চতায় উন্নীত করতে আমাদের সাথে অংশীদারিত্ব করুন।"
     }
   },
   "technologyList": {
