--- a/src/i18n/ja/translation.json
+++ b/src/i18n/ja/translation.json
@@ -409,6 +409,52 @@
         }
       ],
       "footer": "革新的で効果的なウェブソリューションを通じて、オンラインプレゼンスを変革し、ビジネス目標を達成するために、私たちと協力してください。"
+    },
+    "iosAppDev": {
+      "title": "iOSアプリ開発",
+      "header": "BIRDS OF EDENは、シームレスで直感的なiOSアプリケーションを開発し、ブランドのプレゼンスを強化し、App Storeでのエンゲージメントを向上させることを専門としています。",
+      "list": [
+        {
+          "title": "ユーザー中心のデザイン",
+          "description": "ユーザーエクスペリエンスとインターフェースデザインを最優先し、視覚的に魅力的で直感的に操作できるiOSアプリを作成します。"
+        },
+        {
+          "title": "パフォーマンス最適化",
+          "description": "最新技術とベストプラクティスを活用し、iOSアプリケーションの最適なパフォーマンスと応答性を保証します。"
+        },
+        {
+          "title": "App Store最適化（ASO）",
+          "description": "App Storeの複雑なエコシステムをナビゲートし、アプリのリストを最適化して最大限の可視性とダウンロードを実現します。"
+        },
+        {
+          "title": "継続的なサポート",
+          "description": "コンセプトからリリース、そしてその後の運用まで包括的なサポートを提供し、ビジネス目標に沿ったアプリの進化を支援します。"
+        }
+      ],
+      "footer": "iOSアプリのアイデアを実現し、成長し続けるiOSエコシステムでユーザーに強い印象を与えましょう。私たちと一緒に革新的なアプリを開発しませんか？"
+    },
+    "mobileApp": {
+      "title": "モバイルアプリソリューション",
+      "header": "BIRDS OF EDENは、レスポンシブで多機能なアプリケーションを通じて、ビジネスを強化する包括的なモバイルアプリソリューションを提供します。",
+      "list": [
+        {
+          "title": "プラットフォームの多様性",
+          "description": "当社の専門知識は、iOS、Android、およびクロスプラットフォーム環境向けのアプリケーション開発に及び、幅広いユーザーアクセスを保証します。"
+        },
+        {
+          "title": "多機能性",
+          "description": "ユーザー認証、プッシュ通知、アプリ内購入、サードパーティ統合など、幅広い機能を実装し、ユーザーエクスペリエンスとエンゲージメントを向上させます。"
+        },
+        {
+          "title": "スケーラブルなアーキテクチャ",
+          "description": "アプリの成長と進化する要件に対応するスケーラブルなアーキテクチャを設計し、シームレスなパフォーマンスと信頼性を確保します。"
+        },
+        {
+          "title": "アジャイル開発",
+          "description": "アジャイル手法を用いて、コラボレーションと柔軟性を優先し、開発プロセス全体で迅速な反復と継続的な改善を可能にします。"
+        }
+      ],
+      "footer": "モバイルテクノロジーの力を活用し、デジタル時代においてビジネスの成功を新たな高みに押し上げるために、私たちと提携しましょう。"
     }
   },
   "technologyList": {
