translated for payment getway

--- a/src/i18n/ar/translation.json
+++ b/src/i18n/ar/translation.json
@@ -463,6 +463,78 @@
         }
       ],
       "footer": "تعاون معنا للاستفادة من قوة تكنولوجيا الهواتف المحمولة ودفع عملك إلى آفاق جديدة من النجاح في العصر الرقمي."
+    },
+
+    "paymentGateway": {
+      "title": "تكامل بوابة الدفع الآمنة",
+      "description": "نقدم حلول **تكامل بوابة الدفع** السلسة للشركات التي تتطلع إلى **قبول المدفوعات عبر الإنترنت بأمان**. سواء كنت بحاجة إلى دمج **Stripe أو PayPal أو Razorpay**، فإننا نضمن معاملات سلسة **وخالية من المتاعب** لعملائك.",
+      "whyChoose": {
+        "title": "لماذا تختار تكامل بوابة الدفع لدينا؟",
+        "list": [
+          {
+            "title": "معايير أمان عالية:",
+            "text": "تنفيذ **التوافق مع PCI-DSS**، والحماية من الاحتيال، و**تشفير SSL**."
+          },
+          {
+            "title": "معاملات سريعة وسلسة:",
+            "text": "واجهات برمجة تطبيقات محسنة **لمعالجة الدفع الفوري**."
+          },
+          {
+            "title": "تجربة دفع مخصصة:",
+            "text": "تصميم صفحات دفع مخصصة مع **تجربة مستخدم سلسة**."
+          },
+          {
+            "title": "المدفوعات المتكررة والاشتراكات:",
+            "text": "أتمتة دورات الفوترة **للاشتراكات والعضويات**."
+          }
+        ]
+      },
+      "providers": {
+        "title": "مزودو الدفع المدعومون",
+        "list": [
+          {
+            "title": "Stripe",
+            "text": "معالجة الدفع **السريعة والآمنة والصديقة للمطورين** للشركات من جميع الأحجام.",
+            "image": "https://logos-world.net/wp-content/uploads/2021/02/Stripe-Emblem.png"
+          },
+          {
+            "title": "PayPal",
+            "text": "**موثوق به في جميع أنحاء العالم**، يقدم حلول معاملات شخصية وتجارية.",
+            "image": "https://upload.wikimedia.org/wikipedia/commons/b/b5/PayPal.svg"
+          },
+          {
+            "title": "Razorpay",
+            "text": "**الأفضل للشركات الهندية**، يدعم UPI وبطاقات الائتمان والمحافظ.",
+            "image": "https://upload.wikimedia.org/wikipedia/commons/9/92/Razorpay_logo.svg"
+          }
+        ]
+      },
+      "integrationProcess": {
+        "title": "عملية التكامل لدينا",
+        "list": [
+          {
+            "title": "الاستشارة وتحليل المتطلبات:",
+            "text": "فهم احتياجات عملك."
+          },
+          {
+            "title": "تكامل واجهة برمجة التطبيقات:",
+            "text": "اتصال سلس مع **Stripe أو PayPal أو Razorpay**."
+          },
+          {
+            "title": "الاختبار والتوافق:",
+            "text": "ضمان **معاملات آمنة** قبل البدء المباشر."
+          },
+          {
+            "title": "البدء المباشر والدعم:",
+            "text": "**المراقبة والصيانة المستمرة** لعمليات سلسة."
+          }
+        ]
+      },
+      "cta": {
+        "title": "هل أنت مستعد لقبول المدفوعات عبر الإنترنت؟",
+        "description": "ابدأ **بتكامل بوابة الدفع الآمن والفعال اليوم**.",
+        "contact": "اتصل بنا الآن"
+      }
     }
   },
 
