--- a/src/i18n/bn/translation.json
+++ b/src/i18n/bn/translation.json
@@ -464,6 +464,77 @@
         }
       ],
       "footer": "মোবাইল প্রযুক্তির শক্তিকে কাজে লাগাতে এবং আপনার ব্যবসাকে ডিজিটাল যুগের নতুন উচ্চতায় উন্নীত করতে আমাদের সাথে অংশীদারিত্ব করুন।"
+    },
+    "paymentGateway": {
+      "title": "সুরক্ষিত পেমেন্ট গেটওয়ে ইন্টিগ্রেশন",
+      "description": "আমরা **নিরাপদে অনলাইন পেমেন্ট গ্রহণ করতে** আগ্রহী ব্যবসার জন্য নির্বিঘ্ন **পেমেন্ট গেটওয়ে ইন্টিগ্রেশন** সমাধান প্রদান করি। আপনার **স্ট্রাইপ, পেপাল বা রেজারপে** ইন্টিগ্রেট করার প্রয়োজন হোক না কেন, আমরা আপনার গ্রাহকদের জন্য মসৃণ এবং **ঝামেলা-মুক্ত লেনদেন** নিশ্চিত করি।",
+      "whyChoose": {
+        "title": "আমাদের পেমেন্ট গেটওয়ে ইন্টিগ্রেশন কেন বেছে নেবেন?",
+        "list": [
+          {
+            "title": "উচ্চ সুরক্ষা মান:",
+            "text": "**PCI-DSS সম্মতি**, জালিয়াতি সুরক্ষা এবং **SSL এনক্রিপশন** বাস্তবায়ন করুন।"
+          },
+          {
+            "title": "দ্রুত এবং নির্বিঘ্ন লেনদেন:",
+            "text": "**তাত্ক্ষণিক পেমেন্ট প্রক্রিয়াকরণের** জন্য অপ্টিমাইজ করা API।"
+          },
+          {
+            "title": "কাস্টম চেকআউট অভিজ্ঞতা:",
+            "text": "**মসৃণ ব্যবহারকারীর অভিজ্ঞতা** সহ তৈরি পেমেন্ট পৃষ্ঠাগুলি ডিজাইন করুন।"
+          },
+          {
+            "title": "পুনরাবৃত্ত পেমেন্ট এবং সাবস্ক্রিপশন:",
+            "text": "**সাবস্ক্রিপশন এবং সদস্যপদের** জন্য বিলিং চক্র স্বয়ংক্রিয় করুন।"
+          }
+        ]
+      },
+      "providers": {
+        "title": "সমর্থিত পেমেন্ট প্রদানকারী",
+        "list": [
+          {
+            "title": "স্ট্রাইপ",
+            "text": "সকল আকারের ব্যবসার জন্য **দ্রুত, নিরাপদ এবং বিকাশকারী-বান্ধব** পেমেন্ট প্রক্রিয়াকরণ।",
+            "image": "https://logos-world.net/wp-content/uploads/2021/02/Stripe-Emblem.png"
+          },
+          {
+            "title": "পেপাল",
+            "text": "**বিশ্বব্যাপী বিশ্বস্ত**, ব্যক্তিগত এবং ব্যবসায়িক উভয় লেনদেন সমাধান প্রদান করে।",
+            "image": "https://upload.wikimedia.org/wikipedia/commons/b/b5/PayPal.svg"
+          },
+          {
+            "title": "রেজারপে",
+            "text": "**ভারতীয় ব্যবসার জন্য সবচেয়ে উপযুক্ত**, UPI, ক্রেডিট কার্ড এবং ওয়ালেট সমর্থন করে।",
+            "image": "https://upload.wikimedia.org/wikipedia/commons/9/92/Razorpay_logo.svg"
+          }
+        ]
+      },
+      "integrationProcess": {
+        "title": "আমাদের ইন্টিগ্রেশন প্রক্রিয়া",
+        "list": [
+          {
+            "title": "পরামর্শ এবং প্রয়োজনীয়তা বিশ্লেষণ:",
+            "text": "আপনার ব্যবসার চাহিদা বোঝা।"
+          },
+          {
+            "title": "API ইন্টিগ্রেশন:",
+            "text": "**স্ট্রাইপ, পেপাল বা রেজারপে** এর সাথে নির্বিঘ্ন সংযোগ।"
+          },
+          {
+            "title": "পরীক্ষা এবং সম্মতি:",
+            "text": "লাইভ হওয়ার আগে **নিরাপদ লেনদেন** নিশ্চিত করা।"
+          },
+          {
+            "title": "লাইভ এবং সমর্থন:",
+            "text": "মসৃণ অপারেশনের জন্য ক্রমাগত **মনিটরিং এবং রক্ষণাবেক্ষণ**।"
+          }
+        ]
+      },
+      "cta": {
+        "title": "অনলাইন পেমেন্ট গ্রহণ করতে প্রস্তুত?",
+        "description": "**আজই নিরাপদ এবং দক্ষ পেমেন্ট গেটওয়ে ইন্টিগ্রেশন দিয়ে শুরু করুন**।",
+        "contact": "এখনই আমাদের সাথে যোগাযোগ করুন"
+      }
     }
   },
   "technologyList": {
