--- a/src/i18n/ja/translation.json
+++ b/src/i18n/ja/translation.json
@@ -455,6 +455,77 @@
         }
       ],
       "footer": "モバイルテクノロジーの力を活用し、デジタル時代においてビジネスの成功を新たな高みに押し上げるために、私たちと提携しましょう。"
+    },
+    "paymentGateway": {
+      "title": "安全な決済ゲートウェイ統合",
+      "description": "当社は、**オンライン決済を安全に受け付けたい**企業向けに、シームレスな**決済ゲートウェイ統合**ソリューションを提供します。**Stripe、PayPal、Razorpay**のいずれを統合する必要がある場合でも、お客様にスムーズで**手間のかからない取引**を保証します。",
+      "whyChoose": {
+        "title": "当社の決済ゲートウェイ統合を選ぶ理由",
+        "list": [
+          {
+            "title": "高いセキュリティ基準：",
+            "text": "**PCI-DSSコンプライアンス**、不正防止、および**SSL暗号化**を実装します。"
+          },
+          {
+            "title": "迅速でシームレスな取引：",
+            "text": "**即時決済処理**のための最適化されたAPI。"
+          },
+          {
+            "title": "カスタムチェックアウト体験：",
+            "text": "**スムーズなユーザーエクスペリエンス**を備えた、カスタマイズされた決済ページを設計します。"
+          },
+          {
+            "title": "定期的な支払いとサブスクリプション：",
+            "text": "**サブスクリプションとメンバーシップ**の請求サイクルを自動化します。"
+          }
+        ]
+      },
+      "providers": {
+        "title": "サポートされている決済プロバイダー",
+        "list": [
+          {
+            "title": "Stripe",
+            "text": "あらゆる規模の企業向けに、**高速、安全、開発者フレンドリー**な決済処理を提供します。",
+            "image": "https://logos-world.net/wp-content/uploads/2021/02/Stripe-Emblem.png"
+          },
+          {
+            "title": "PayPal",
+            "text": "**世界中で信頼されており**、個人およびビジネスの取引ソリューションを提供します。",
+            "image": "https://upload.wikimedia.org/wikipedia/commons/b/b5/PayPal.svg"
+          },
+          {
+            "title": "Razorpay",
+            "text": "**インドの企業に最適**で、UPI、クレジットカード、ウォレットをサポートします。",
+            "image": "https://upload.wikimedia.org/wikipedia/commons/9/92/Razorpay_logo.svg"
+          }
+        ]
+      },
+      "integrationProcess": {
+        "title": "当社の統合プロセス",
+        "list": [
+          {
+            "title": "コンサルテーションと要件分析：",
+            "text": "お客様のビジネスニーズを理解します。"
+          },
+          {
+            "title": "API統合：",
+            "text": "**Stripe、PayPal、またはRazorpay**とのシームレスな接続。"
+          },
+          {
+            "title": "テストとコンプライアンス：",
+            "text": "稼働前に**安全な取引**を保証します。"
+          },
+          {
+            "title": "稼働とサポート：",
+            "text": "スムーズな運用のために、継続的な**監視とメンテナンス**を行います。"
+          }
+        ]
+      },
+      "cta": {
+        "title": "オンライン決済を受け付ける準備はできましたか？",
+        "description": "**安全で効率的な決済ゲートウェイ統合を今すぐ開始しましょう**。",
+        "contact": "今すぐお問い合わせください"
+      }
     }
   },
   "technologyList": {
