translation for aboutus and teamlist page

--- a/src/i18n/ar/translation.json
+++ b/src/i18n/ar/translation.json
@@ -88,13 +88,47 @@
       },
       "drones": [
         {
-          "title": "AgriPrecision X1",
-          "description": "طائرة زراعية متقدمة مزودة بتقنية التصوير متعدد الأطياف ونظام رش دقيق وتحليل محاصيل مدعوم بالذكاء الاصطناعي.",
+          "id": 1,
+          "title": "أغريبريسيجن إكس 1",
+          "description": "طائرة بدون طيار زراعية متقدمة مجهزة بالتصوير متعدد الأطياف لمراقبة صحة المحاصيل، ونظام رش دقيق لتوزيع مبيدات الآفات بكفاءة، وتحليل المحاصيل المدعوم بالذكاء الاصطناعي.",
           "image": "https://images.unsplash.com/photo-1579829366248-204fe8413f31?ixlib=rb-1.2.1&auto=format&fit=crop&w=1200&q=80",
           "specs": {
             "flightTime": "45 دقيقة",
             "range": "10 كم",
             "camera": "متعدد الأطياف + 4K RGB"
+          }
+        },
+        {
+          "id": 2,
+          "title": "فايرريسكو برو",
+          "description": "طائرة بدون طيار عالية الأداء للاستجابة للطوارئ مزودة بالتصوير الحراري، وقدرات اختراق الدخان، ونقل الفيديو في الوقت الفعلي.",
+          "image": "https://images.unsplash.com/photo-1579829366248-204fe8413f31?ixlib=rb-1.2.1&auto=format&fit=crop&w=1200&q=80",
+          "specs": {
+            "flightTime": "35 دقيقة",
+            "range": "8 كم",
+            "camera": "حراري + 4K HDR"
+          }
+        },
+        {
+          "id": 3,
+          "title": "إنسبكتور تيك إكس 2",
+          "description": "طائرة بدون طيار للتفتيش الصناعي مصممة لمراقبة وصيانة البنية التحتية. تتميز بكاميرات فائقة الدقة، ومسح ليدار، وذكاء اصطناعي للكشف عن الشقوق.",
+          "image": "https://images.unsplash.com/photo-1473968512647-3e447244af8f?ixlib=rb-1.2.1&auto=format&fit=crop&w=1200&q=80",
+          "specs": {
+            "flightTime": "40 دقيقة",
+            "range": "6 كم",
+            "camera": "8K + ليدار"
+          }
+        },
+        {
+          "id": 4,
+          "title": "ماين مابر إيليت",
+          "description": "طائرة بدون طيار متخصصة للتعدين والمحاجر مع قدرات رسم خرائط ثلاثية الأبعاد متقدمة، وتصميم مقاوم للغبار، ونظام ملاحة تحت الأرض.",
+          "image": "https://images.unsplash.com/photo-1508614589041-895b88991e3e?ixlib=rb-1.2.1&auto=format&fit=crop&w=1200&q=80",
+          "specs": {
+            "flightTime": "50 دقيقة",
+            "range": "12 كم",
+            "camera": "6K + ماسح ضوئي ثلاثي الأبعاد"
           }
         }
       ]
@@ -485,5 +519,54 @@
         "location": "عن بعد"
       }
     ]
+  },
+  "aboutUs": {
+    "title": "عن BIRDS OF EDEN",
+    "header": "BIRDS OF EDEN هي شركة برمجيات ديناميكية مكرسة لإنشاء حلول مبتكرة تمكّن الشركات من الازدهار في العصر الرقمي.",
+    "missionTitle": "مهمتنا",
+    "mission": "في BIRDS OF EDEN، مهمتنا هي إحداث ثورة في صناعة البرمجيات من خلال تقديم منتجات وخدمات متطورة تتجاوز توقعات عملائنا.",
+    "valuesTitle": "قيمنا",
+    "values": [
+      "الابتكار: نستكشف باستمرار أفكارًا وتقنيات جديدة للبقاء في المقدمة.",
+      "الجودة: نحن ملتزمون بتقديم حلول عالية الجودة تضيف قيمة لأعمال عملائنا.",
+      "النزاهة: نحن نمارس الأعمال التجارية بصدق وشفافية ونزاهة.",
+      "رضا العملاء: نحن نضع احتياجات العملاء ورضاهم فوق كل شيء.",
+      "التعاون: نحن نؤمن بقوة التعاون والعمل الجماعي لتحقيق النجاح."
+    ],
+    "coreMembersTitle": "الأعضاء الأساسيون",
+    "coreMembers": [
+      {
+        "name": "طلعت محمد توفيق إلحي",
+        "role": "المؤسس المشارك والرئيس التنفيذي"
+      },
+      {
+        "name": "محمد أمين الإسلام",
+        "role": "الرئيس التنفيذي للتكنولوجيا"
+      }
+    ]
+  },
+  "team": {
+    "title": "تعرف على فريقنا التنفيذي",
+    "roles": {
+      "CEO": "الرئيس التنفيذي",
+      "CTO": "الرئيس التنفيذي للتكنولوجيا",
+      "COO": "الرئيس التنفيذي للعمليات"
+    },
+    "members": [
+      {
+        "name": "طلعت محمد توفيق إلحي",
+        "role": "الرئيس التنفيذي",
+        "portfolioLink": "https://talat-me.vercel.app/",
+        "description": "طلعت محمد توفيق إلحي هو قائد ذو رؤية يقود النمو الاستراتيجي والتميز. بنهجه المستقبلي، يتوقع تغيرات السوق ويتنقل بين التحديات بمرونة. قيادته تربط بين الاستراتيجية والتنفيذ، مما يضمن نجاح المنظمة."
+      },
+      {
+        "name": "محمد أمين الإسلام",
+        "role": "الرئيس التنفيذي للتكنولوجيا",
+        "portfolioLink": "https://talat-me.vercel.app/",
+        "description": "محمد أمين الإسلام هو مبتكر استراتيجي يقود الكفاءة التشغيلية والنمو. إنه يجمع بين التفكير المستقبلي والتنفيذ العملي لتحقيق الأهداف التجارية. يتيح استبصاره للمؤسسة التكيف والازدهار في بيئة ديناميكية."
+      }
+    ],
+    "descriptionTitle": "الوصف",
+    "viewPortfolio": "عرض الملف الشخصي"
   }
 }
