translated for quickbook and zohointegration

--- a/src/i18n/ar/translation.json
+++ b/src/i18n/ar/translation.json
@@ -569,6 +569,52 @@
         "description": "ابدأ **بتكامل بوابة الدفع الآمن والفعال اليوم**.",
         "contact": "اتصل بنا الآن"
       }
+    },
+    "quickBook": {
+      "title": "خدمات تكامل QuickBooks",
+      "description": "عزز **إدارتك المالية** بتكامل **QuickBooks** السلس. نحن متخصصون في دمج **QuickBooks Online** و **QuickBooks Desktop**، مما يمكّن الشركات من أتمتة المحاسبة، وتبسيط المعاملات، والحفاظ على الدقة المالية.",
+      "list": [
+        {
+          "title": "المحاسبة الآلية:",
+          "text": "قم بمزامنة **الفواتير والمصروفات وكشوف المرتبات والتقارير المالية** بسهولة لتحسين الدقة والكفاءة."
+        },
+        {
+          "title": "المعاملات السلسة:",
+          "text": "قم بتوصيل **الحسابات المصرفية والسجلات الضريبية وبوابات الدفع** للحصول على رؤى مالية في الوقت الفعلي والتسوية الآلية."
+        },
+        {
+          "title": "التوافق مع منصات متعددة:",
+          "text": "متوافق تمامًا مع **تطبيقات الويب وتطبيقات الهاتف المحمول والمنصات المستندة إلى السحابة** للإدارة المالية المرنة."
+        },
+        {
+          "title": "أمن البيانات والامتثال:",
+          "text": "يضمن **التشفير بمستوى البنك** القياسي في الصناعة المعاملات المالية الآمنة وحماية البيانات."
+        }
+      ],
+      "footer": "قم بتحسين الشؤون المالية لشركتك من خلال **حلول تكامل QuickBooks المخصصة لدينا**. اتصل بنا اليوم **لأتمتة المحاسبة وتبسيط العمليات المالية**."
+    },
+    "zohoIntegration": {
+      "title": "خدمات تكامل Zoho",
+      "description": "عزز كفاءة أعمالك من خلال **خدمات تكامل Zoho** الخاصة بنا. نحن متخصصون في دمج **Zoho CRM و Zoho Books و Zoho People و Zoho Inventory** بسلاسة لتبسيط عملياتك وزيادة الإنتاجية.",
+      "list": [
+        {
+          "title": "تكامل Zoho CRM",
+          "text": "أتمتة إدارة علاقات العملاء لتحسين مسارات المبيعات وتعزيز تفاعل العملاء."
+        },
+        {
+          "title": "حلول التمويل والمحاسبة",
+          "text": "إدارة **الفواتير والمصروفات والمحاسبة** بكفاءة باستخدام Zoho Books، بما في ذلك عمليات التكامل مع **QuickBooks و Stripe**."
+        },
+        {
+          "title": "إدارة الموارد البشرية وكشوف المرتبات",
+          "text": "تبسيط عمليات القوى العاملة باستخدام **Zoho People** لتتبع الحضور وإدارة الإجازات ومعالجة كشوف المرتبات."
+        },
+        {
+          "title": "تدفقات عمل Zoho المخصصة",
+          "text": "تطوير **تدفقات عمل آلية** ودمج **تطبيقات الطرف الثالث** لتعزيز الكفاءة التشغيلية."
+        }
+      ],
+      "footer": "استفد من **مجموعة أدوات أعمال Zoho** لتعزيز الإنتاجية وقابلية التوسع. اتصل بنا اليوم لاستكشاف **حل تكامل Zoho مخصص** لعملك."
     }
   },
 
