--- a/src/i18n/ja/translation.json
+++ b/src/i18n/ja/translation.json
@@ -560,6 +560,52 @@
         "description": "**安全で効率的な決済ゲートウェイ統合を今すぐ開始しましょう**。",
         "contact": "今すぐお問い合わせください"
       }
+    },
+    "quickBook": {
+      "title": "QuickBooks統合サービス",
+      "description": "シームレスな**QuickBooks統合**で**財務管理**を強化しましょう。当社は**QuickBooks Online**と**QuickBooks Desktop**の統合に特化し、企業が会計を自動化し、取引を合理化し、財務の正確性を維持できるようにします。",
+      "list": [
+        {
+          "title": "自動化された会計：",
+          "text": "精度と効率を向上させるために、**請求書、経費、給与、および財務レポート**を簡単に同期します。"
+        },
+        {
+          "title": "シームレスな取引：",
+          "text": "リアルタイムの財務洞察と自動照合のために、**銀行口座、税務記録、および決済ゲートウェイ**を接続します。"
+        },
+        {
+          "title": "マルチプラットフォーム互換性：",
+          "text": "柔軟な財務管理のために、**Webアプリケーション、モバイルアプリ、およびクラウドベースのプラットフォーム**と完全に互換性があります。"
+        },
+        {
+          "title": "データセキュリティとコンプライアンス：",
+          "text": "業界標準の**銀行レベルの暗号化**により、安全な金融取引とデータ保護が保証されます。"
+        }
+      ],
+      "footer": "当社の**カスタムQuickBooks統合ソリューション**でビジネス財務を最適化しましょう。会計を**自動化し、財務業務を合理化**するために、今すぐお問い合わせください。"
+    },
+    "zohoIntegration": {
+      "title": "Zoho統合サービス",
+      "description": "当社の**Zoho統合サービス**でビジネス効率を向上させましょう。当社は、**Zoho CRM、Zoho Books、Zoho People、Zoho Inventory**をシームレスに統合し、業務を合理化し、生産性を向上させることに特化しています。",
+      "list": [
+        {
+          "title": "Zoho CRM統合",
+          "text": "顧客関係管理を自動化して、営業パイプラインを最適化し、顧客エンゲージメントを強化します。"
+        },
+        {
+          "title": "財務および会計ソリューション",
+          "text": "**QuickBooksおよびStripe**との統合を含むZoho Booksで**請求書、経費、および会計**を効率的に管理します。"
+        },
+        {
+          "title": "人事および給与管理",
+          "text": "出席追跡、休暇管理、および給与処理のために**Zoho People**で従業員業務を合理化します。"
+        },
+        {
+          "title": "カスタムZohoワークフロー",
+          "text": "業務効率を向上させるために**自動化されたワークフロー**を開発し、**サードパーティアプリケーション**を統合します。"
+        }
+      ],
+      "footer": "生産性と拡張性を高めるために**Zohoのビジネスツールスイート**を活用してください。お客様のビジネスに合わせた**カスタムZoho統合ソリューション**を検討するために、今すぐお問い合わせください。"
     }
   },
   "technologyList": {
