--- a/src/i18n/bn/translation.json
+++ b/src/i18n/bn/translation.json
@@ -569,6 +569,52 @@
         "description": "**আজই নিরাপদ এবং দক্ষ পেমেন্ট গেটওয়ে ইন্টিগ্রেশন দিয়ে শুরু করুন**।",
         "contact": "এখনই আমাদের সাথে যোগাযোগ করুন"
       }
+    },
+    "quickBook": {
+      "title": "কুইকবুকস ইন্টিগ্রেশন সার্ভিসেস",
+      "description": "নির্বিঘ্ন **কুইকবুকস ইন্টিগ্রেশন** এর মাধ্যমে আপনার **আর্থিক ব্যবস্থাপনা** উন্নত করুন। আমরা **কুইকবুকস অনলাইন** এবং **কুইকবুকস ডেস্কটপ** ইন্টিগ্রেট করার জন্য বিশেষজ্ঞ, যা ব্যবসাগুলিকে অ্যাকাউন্টিং স্বয়ংক্রিয় করতে, লেনদেনগুলিকে সুগম করতে এবং আর্থিক নির্ভুলতা বজায় রাখতে সক্ষম করে।",
+      "list": [
+        {
+          "title": "স্বয়ংক্রিয় অ্যাকাউন্টিং:",
+          "text": "নির্ভুলতা এবং দক্ষতা উন্নত করতে সহজেই **ইনভয়েস, খরচ, বেতন এবং আর্থিক প্রতিবেদন** সিঙ্ক করুন।"
+        },
+        {
+          "title": "নির্বিঘ্ন লেনদেন:",
+          "text": "রিয়েল-টাইম আর্থিক অন্তর্দৃষ্টি এবং স্বয়ংক্রিয় পুনর্মিলনের জন্য **ব্যাঙ্ক অ্যাকাউন্ট, ট্যাক্স রেকর্ড এবং পেমেন্ট গেটওয়ে** সংযোগ করুন।"
+        },
+        {
+          "title": "মাল্টি-প্ল্যাটফর্ম সামঞ্জস্যতা:",
+          "text": "নমনীয় আর্থিক ব্যবস্থাপনার জন্য **ওয়েব অ্যাপ্লিকেশন, মোবাইল অ্যাপ এবং ক্লাউড-ভিত্তিক প্ল্যাটফর্মগুলির** সাথে সম্পূর্ণরূপে সামঞ্জস্যপূর্ণ।"
+        },
+        {
+          "title": "ডেটা সুরক্ষা এবং সম্মতি:",
+          "text": "শিল্প-মানক **ব্যাঙ্ক-স্তরের এনক্রিপশন** নিরাপদ আর্থিক লেনদেন এবং ডেটা সুরক্ষা নিশ্চিত করে।"
+        }
+      ],
+      "footer": "আমাদের **কাস্টম কুইকবুকস ইন্টিগ্রেশন সমাধান** দিয়ে আপনার ব্যবসার আর্থিক অবস্থা অপ্টিমাইজ করুন। আপনার অ্যাকাউন্টিং **স্বয়ংক্রিয় করতে এবং আর্থিক কার্যক্রমকে সুগম করতে** আজই আমাদের সাথে যোগাযোগ করুন।"
+    },
+    "zohoIntegration": {
+      "title": "Zoho ইন্টিগ্রেশন সার্ভিসেস",
+      "description": "আমাদের **Zoho ইন্টিগ্রেশন সার্ভিসেস** এর মাধ্যমে আপনার ব্যবসার দক্ষতা বাড়ান। আমরা আপনার কার্যক্রমকে সুগম করতে এবং উৎপাদনশীলতা বাড়াতে **Zoho CRM, Zoho Books, Zoho People এবং Zoho Inventory** কে নির্বিঘ্নে ইন্টিগ্রেট করার জন্য বিশেষজ্ঞ।",
+      "list": [
+        {
+          "title": "Zoho CRM ইন্টিগ্রেশন",
+          "text": "বিক্রয় পাইপলাইন অপ্টিমাইজ করতে এবং ক্লায়েন্ট এনগেজমেন্ট বাড়াতে গ্রাহক সম্পর্ক ব্যবস্থাপনা স্বয়ংক্রিয় করুন।"
+        },
+        {
+          "title": "ফাইন্যান্স এবং অ্যাকাউন্টিং সলিউশন",
+          "text": "**কুইকবুকস এবং স্ট্রাইপ** এর সাথে ইন্টিগ্রেশন সহ Zoho Books দিয়ে দক্ষতার সাথে **ইনভয়েস, খরচ এবং অ্যাকাউন্টিং** পরিচালনা করুন।"
+        },
+        {
+          "title": "এইচআর এবং পেরোল ম্যানেজমেন্ট",
+          "text": "উপস্থিতি ট্র্যাকিং, ছুটি ব্যবস্থাপনা এবং পেরোল প্রক্রিয়াকরণের জন্য **Zoho People** দিয়ে কর্মীবাহিনীর কার্যক্রম সুগম করুন।"
+        },
+        {
+          "title": "কাস্টম Zoho ওয়ার্কফ্লো",
+          "text": "কার্যকরী দক্ষতা বাড়াতে **স্বয়ংক্রিয় ওয়ার্কফ্লো** তৈরি করুন এবং **তৃতীয় পক্ষের অ্যাপ্লিকেশন** ইন্টিগ্রেট করুন।"
+        }
+      ],
+      "footer": "উৎপাদনশীলতা এবং মাপযোগ্যতা বাড়াতে **Zoho এর ব্যবসায়িক সরঞ্জাম স্যুট** ব্যবহার করুন। আপনার ব্যবসার জন্য একটি **কাস্টম-তৈরি Zoho ইন্টিগ্রেশন সমাধান** অন্বেষণ করতে আজই আমাদের সাথে যোগাযোগ করুন।"
     }
   },
   "technologyList": {
