--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -595,6 +595,52 @@
         "description": "Get started with **secure and efficient payment gateway integration today**.",
         "contact": "Contact Us Now"
       }
+    },
+    "quickBook": {
+      "title": "QuickBooks Integration Services",
+      "description": "Enhance your **financial management** with seamless **QuickBooks Integration**. We specialize in integrating **QuickBooks Online** and **QuickBooks Desktop**, enabling businesses to automate accounting, streamline transactions, and maintain financial accuracy.",
+      "list": [
+        {
+          "title": "Automated Accounting:",
+          "text": "Effortlessly sync **invoices, expenses, payroll, and financial reports** to improve accuracy and efficiency."
+        },
+        {
+          "title": "Seamless Transactions:",
+          "text": "Connect **bank accounts, tax records, and payment gateways** for real-time financial insights and automated reconciliation."
+        },
+        {
+          "title": "Multi-Platform Compatibility:",
+          "text": "Fully compatible with **web applications, mobile apps, and cloud-based platforms** for flexible financial management."
+        },
+        {
+          "title": "Data Security & Compliance:",
+          "text": "Industry-standard **bank-level encryption** ensures secure financial transactions and data protection."
+        }
+      ],
+      "footer": "Optimize your business finances with our **custom QuickBooks integration solutions**. Contact us today to **automate your accounting and streamline financial operations**."
+    },
+    "zohoIntegration": {
+      "title": "Zoho Integration Services",
+      "description": "Enhance your business efficiency with our **Zoho Integration Services**. We specialize in seamlessly integrating **Zoho CRM, Zoho Books, Zoho People, and Zoho Inventory** to streamline your operations and drive productivity.",
+      "list": [
+        {
+          "title": "Zoho CRM Integration",
+          "text": "Automate customer relationship management to optimize sales pipelines and enhance client engagement."
+        },
+        {
+          "title": "Finance & Accounting Solutions",
+          "text": "Efficiently manage **invoices, expenses, and accounting** with Zoho Books, including integrations with **QuickBooks and Stripe**."
+        },
+        {
+          "title": "HR & Payroll Management",
+          "text": "Streamline workforce operations with **Zoho People** for attendance tracking, leave management, and payroll processing."
+        },
+        {
+          "title": "Custom Zoho Workflows",
+          "text": "Develop **automated workflows** and integrate **third-party applications** to enhance operational efficiency."
+        }
+      ],
+      "footer": "Leverage **Zoho's suite of business tools** to enhance productivity and scalability. Contact us today to explore a **custom-tailored Zoho integration solution** for your business."
     }
   },
   "technologyList": {
